# multimoda-rs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.MD  fullworkflow.py  play.py  pyproject.toml  test_adjust_ccta.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
benchmarks/: BENCHMARK_PLAN.md  benchmark_bruteforce_stepsize.py  benchmark_cpu_scaling.py
data/: center_smoothed.vtk  centerline.txt  centerline_aorta.csv  centerline_raw.csv  centerline_rca.csv  centerlines_narco119.csv  resampled_centerline.txt
data/fixtures/: dia_rest.npy  dia_rest_catheter.npy  dia_rest_contours.npy  dia_rest_ref_pt.npy  dia_rest_walls.npy  dia_stress.npy  dia_stress_catheter.npy  dia_stress_contours.npy  dia_stress_ref_pt.npy  dia_stress_walls.npy  diastolic_contours.txt  sys_rest.npy  sys_rest_catheter.npy  sys_rest_contours.npy  sys_rest_ref_pt.npy  sys_rest_walls.npy  sys_stress.npy  sys_stress_catheter.npy  sys_stress_contours.npy  sys_stress_ref_pt.npy  sys_stress_walls.npy
data/fixtures/ali_test/: diastolic_reference_points.csv  frame_to_frame_transforms.txt  systolic_contours.csv
data/fixtures/idealized_geometry/: branch_diastolic_contours.csv  calcium_systolic_contours.csv  diastolic_contours.csv  diastolic_reference_points.csv  systolic_contours.csv
data/fixtures/idealized_test/: diastolic_reference_points.csv  frame_to_frame_transforms.txt  systolic_contours.csv
data/fixtures/ivus_full/: branch_diastolic_contours.csv  branch_systolic_contours.csv  calcium_diastolic_contours.csv  calcium_systolic_contours.csv  diastolic_contours.csv  diastolic_reference_points.csv  eem_diastolic_contours.csv  eem_systolic_contours.csv  systolic_contours.csv
data/fixtures/ivus_rest/: combined_sorted_manual.csv  diastolic_contours.csv  diastolic_reference_points.csv  systolic_contours.csv
data/fixtures/ivus_stress/: combined_sorted_manual.csv  diastolic_contours.csv  (+1 more)
data/ivus_full/: branch_diastolic_contours.csv  calcium_systolic_contours.csv  diastolic_contours.csv  eem_systolic_contours.csv  systolic_reference_points.csv
data/ivus_poststent/: diastolic_reference_points.csv  systolic_reference_points.csv
data/ivus_prestent/: combined_sorted_manual.csv  diastolic_contours.csv  diastolic_reference_points.csv  systolic_contours.csv  systolic_reference_points.csv
data/ivus_rest/: combined_sorted_manual.csv
data/oct_single/: oct_ref.csv
docs/: api.md  api.rst  benchmark.rst  build.sh  changelog.md  conf.py  index.rst  installation.rst  tutorial.rst  tutorial_ccta.rst  tutorial_intravascular.rst
docs/api/: adjust_ccta.rst  centerline.rst  converters_and_wrappers.rst  core.rst  index.rst  processing.rst  utilities.rst
docs/notebooks/: intravascular_notebook.ipynb
examples/: blender_script.py  edit_centerline.py  fullworkflow.py  ivus_to_centerline.ipynb  manual_hole.py  stitching.py  test_adjust_ccta.py
examples/data/: NARCO_119.stl  ao_cl.vtp  centerline_aorta.csv  centerline_lca.csv  centerline_raw.csv  centerline_rca_short.csv  lca_cl.vtp  rca_cl.vtp
multimodars/: __init__.py  _converters.py  _processing.py  _wrappers.py  multimodars.pyi
multimodars/ccta/: __init__.py  adjust_ccta.py  debug_plots.py  discretization_map.py  fixing_functions.py  labeling.py  manipulating.py
multimodars/io/: __init__.py  read_geometrical.py  write_geometries.py
paper/: REVIEWER1.md  REVIEWER2.md  bibliography.bib  paper.md
src/: entry.rs  lib.rs  python_bind.rs  types.rs
src/binding/: align.rs  centerline_align.rs  classes.rs  entry.rs  entry_arr.rs  entry_file.rs  mod.rs
src/ccta/: adjust_mesh.rs  discretizing.rs  mod.rs
src/centerline_align/: align_algorithms.rs  mod.rs  preprocessing.rs
src/intravascular/: binding.rs  centerline_align.rs  io.rs  mod.rs  to_object.rs
src/io/: input.rs  load_geometry.rs  mod.rs  output.rs
src/mesh_to_centerline/: mod.rs  operations.rs  preprocessing.rs
src/processing/: align_between.rs  align_within.rs  comparison.rs  contours.rs  geometries.rs  mod.rs  process_case.rs  process_utils.rs  resampling.rs  walls.rs
src/texture/: mod.rs  texture.rs
src/types/: binding.rs  native.rs  utils.rs
src/utils/: mod.rs  test_utils.rs  utils.rs
test_data/rest_csv_files/: combined_sorted_manual.csv  diastolic_contours.csv
test_data/stress_csv_files/: combined_sorted_manual.csv  diastolic_contours.csv  diastolic_reference_points.csv  systolic_contours.csv  systolic_reference_points.csv
tests/: conftest.py  test_ccta.py  test_converters.py  test_core.py  test_intravascular.py  test_wrappers.py  tests_todo.md
(+124 files in other folders)
