[package]
name = "multimodars"
version = "0.1.1"
edition = "2021"
license = "MIT"

[lib]
name = "multimodars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.1"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"]}
image = "0.25.9"
nalgebra = "0.34.1"
toml = "0.9.8"
rayon = "1.7.1"
crossbeam = "0.8.4"
anyhow = "1.0.100"
approx = "0.5"
stl_io = "0.10.0"