[package]
name = "multimodars"
version = "0.5.0"
edition = "2021"
license = "MIT"

[lib]
name = "multimodars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"]}
image = "0.25.10"
nalgebra = "0.35.0"
toml = "1.1.2"
rayon = "1.12.0"
crossbeam = "0.8.4"
anyhow = "1.0.102"
approx = "0.5"
indicatif = "0.18.4"